rmk-macro/tests/compile_fail/input_event_generic.stderr
error: #[input_event] does not support generic types. Static channels cannot be generic.
 --> tests/compile_fail/input_event_generic.rs:8:29
  |
8 | pub struct GenericInputEvent<T> {
  |                             ^^^
